[package]
name = "nalgebra-mvn"
description = "Multivariate normal distribution using nalgebra"
version = "0.10.0"
license = "MIT/Apache-2.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
repository = "https://github.com/astraw/nalgebra-mvn"
readme="README.md"

[dependencies]
nalgebra = "0.29"

[dev-dependencies]
approx = "0.5"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
